fix scrollbar bug

--- a/_html_lot3/app/assets/sass/components/_grid.scss
+++ b/_html_lot3/app/assets/sass/components/_grid.scss
@@ -10,6 +10,7 @@
     .contain-img {
       overflow: hidden;
       background-size: cover;
+      width: 100.5%;
     }
   }
 
