--- a/src/FDC/EventBundle/Resources/public/webview/css/webview.css
+++ b/src/FDC/EventBundle/Resources/public/webview/css/webview.css
@@ -335,6 +335,112 @@ html {
 .Article-content table {
   width: 100% !important; }
 
+.Article-content .big-quote {
+  padding: 70px 70px;
+  box-sizing: border-box;
+  border: 1px solid #c8a461;
+  margin-bottom: 70px; }
+
+.Article-content .txt-grey-bkg-container {
+  background-color: #f4f4f4;
+  padding: 70px 70px;
+  margin-bottom: 70px;
+  color: #666;
+  font-size: 1rem;
+  line-height: 1.7em;
+  margin-bottom: 5px; }
+
+.Article-content .cke_editable .single-button {
+  border-right: 1px solid #c8a461 !important;
+  border-color: #c8a461; }
+
+.Article-content .button {
+  border: 1px solid #dfdfdf;
+  border-right: none;
+  color: #c8a461;
+  display: inline-block;
+  font-family: "Camphor W01 Bold", Arial, Helvetica, sans-serif;
+  font-size: 0.688rem;
+  height: 38px;
+  line-height: 38px;
+  margin: 0 0 0 0;
+  padding: 0 19px 0 19px;
+  text-transform: uppercase;
+  -moz-transition: all 0.9s cubic-bezier(0.15, 0.9, 0.34, 0.95);
+  -o-transition: all 0.9s cubic-bezier(0.15, 0.9, 0.34, 0.95);
+  -webkit-transition: all 0.9s cubic-bezier(0.15, 0.9, 0.34, 0.95);
+  transition: all 0.9s cubic-bezier(0.15, 0.9, 0.34, 0.95); }
+
+.Article-content .title-article {
+  color: #333;
+  font-family: "Playfair Display", Times New Roman, Times, serif;
+  font-size: 3rem;
+  font-weight: 400;
+  line-height: 1.3em;
+  margin: 20px auto;
+  text-align: center; }
+
+.Article-content h2.sub-title {
+  font-family: "Playfair Display", Times New Roman, Times, serif;
+  font-size: 1.5rem;
+  margin-bottom: 50px;
+  text-align: center; }
+
+.Article-content h2.sub-title2 {
+  font-family: "Playfair Display", Times New Roman, Times, serif;
+  font-weight: 700;
+  font-size: 1.125rem;
+  margin: 25px 0px; }
+
+.Article-content h3.sub-title {
+  font-family: "Camphor W01 Bold", Arial, Helvetica, sans-serif;
+  font-size: 0.875rem;
+  margin: 50px 0;
+  text-align: center;
+  text-transform: uppercase; }
+
+.Article-content .little-txt {
+  color: #969696;
+  font-size: 0.750rem;
+  margin: 10px 0 0;
+  text-align: left; }
+
+.Article-content .big-txt {
+  color: #333333;
+  font-family: "Camphor W01 Regular", Arial, Helvetica, sans-serif;
+  font-size: 1.25rem;
+  line-height: 40px;
+  text-align: center; }
+
+.Article-content .chapeau {
+  font-family: "Camphor W01 Bold", Arial, Helvetica, sans-serif;
+  color: #333;
+  font-size: 1.125rem;
+  line-height: 2em;
+  margin-bottom: 70px;
+  text-align: center; }
+
+.Article-content .caption-article {
+  color: #333333;
+  font-size: 0.750rem;
+  margin: 10px 0 0;
+  text-align: left;
+  display: block;
+  padding-top: 10px;
+  border-top: 1px solid #dfdfdf; }
+
+.Article-content .title-acces {
+  text-transform: uppercase;
+  letter-spacing: 2px;
+  font-family: "Camphor W01 Bold", Arial, Helvetica, sans-serif;
+  font-size: .75rem;
+  padding-bottom: 20px; }
+
+.Article-content .descript-acces {
+  padding-bottom: 20px;
+  font-size: .8125rem;
+  line-height: 24px; }
+
 .jwplayer.jw-skin-fdc.jw-state-playing .jw-title, .jwplayer.jw-skin-fdc.jw-state-complete .jw-title {
   display: block;
   top: .7rem;
